--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,14 +1,15 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "index.js.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/book(.*)",
-            "dest": "/index.js"
-        
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
 }
